demo_isd_based_canary/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: testapp-rollout
spec:
  selector:
    app: testapp-rollout
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088
